--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="form-group">
                 <label for="language">Lenguaje</label>
                 <select class="form-control" name="language" id="language">
-                    <option value="Spanish" selected>Spanish</option>
-                    <option value="English">English</option>
-                    <option value="Portuguese">Portuguese</option>
+                    <option value="Spanish" selected>Español</option>
+                    <option value="English">Ingles</option>
+                    <option value="Portuguese">Portugues</option>
                 </select>
             </div>
             <!--div class="form-group">
