--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
                     <option value="Portuguese">Portugues</option>
                 </select>
             </div>
-            <!--div class="form-group">
-                <label for="model">Model</label>
-                <input type="text" class="form-control" name="model" placeholder="Model">
-            </div-->
+            <div class="form-group">
+                <label for="model">Modelo</label>
+                <p>Si no sabes que es esto, no lo toques.</p>
+                <select class="form-control" name="model" id="model">
+                    <option default value="small" selected>Chico 🍌</option>
+                    <option value="base">Más chico 🪱</option>
+                    <option value="tiny">Infimo 🦠</option>
+                    <option value="medium">Grande 🍆</option>
+                    <option value="large">Gigante 🐻</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary my-4">Transcribir</button>
         </form>
         <div id="alert-box" class="alert alert-success mt-4" style="display:none;">
