--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 <label for="files">Seleccioná un audio o video</label>
                 <input type="file" class="form-control-file" name="files">
             </div>
-            <div class="form-group">
-                <label for="language">Lenguaje</label>
+            <div class="form-group my-3 col-6">
+                <label for="language" class="fw-bold">Lenguaje</label>
                 <select class="form-control" name="language" id="language">
                     <option value="Spanish" selected>Español</option>
                     <option value="English">Ingles</option>
                     <option value="Portuguese">Portugues</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label for="model">Modelo</label>
+            <div class="form-group my-3 col-6">
+                <label for="model" class="fw-bold">Modelo</label>
                 <p>Si no sabes que es esto, no lo toques.</p>
                 <select class="form-control" name="model" id="model">
                     <option default value="small" selected>Chico 🍌</option>
