--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <div id="spinner" style="display: none;">
             <img style="width: 16px; height: 16px;" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.16.1/images/loader-large.gif" alt=""> Subiendo...
         </div>
+        <div id="alert-upload-failed" class="alert alert-danger mt-4" style="display:none;">
+            Hubo algun problema al intentar subir el archivo. Intentá de nuevo y si no funciona laburá 😅
+        </div>
         <div id="alert-upload" class="alert alert-success mt-4" style="display:none;">
             El archivo ya se terminó de subir. Ahora estamos transcribiendolo a texto. Esto puede demorar.
         </div>
@@ -60,6 +63,7 @@
         const ws = new WebSocket("ws://34.70.39.139:8080/ws");
         const alertBox = document.getElementById("alert-box");
         const alertUpload = document.getElementById("alert-upload");
+        const alertUploadFailed = document.getElementById("alert-upload-failed");
         const spinner = document.getElementById("spinner");
         const downloadLink = document.getElementById("download-link");
 
@@ -82,6 +86,7 @@
 
         const form = document.getElementById("upload-form");
         form.addEventListener("submit", function(event) {
+            alertUploadFailed.style.display = "none";
             alertBox.style.display = "none";            
             alertUpload.style.display = "none";
             spinner.style.display = "block";
@@ -97,7 +102,11 @@
                 alertUpload.style.display = "block";
             })
             .catch(error => {
-                console.error("Upload failed:", error);
+                console.error("Upload failed:", error);     
+                alertUploadFailed.style.display = "block";
+                alertBox.style.display = "none";            
+                alertUpload.style.display = "none";
+                spinner.style.display = "none";
             });
         });
     </script>
