--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="file" class="form-control-file" name="files">
             </div>
             <div class="row">
-                <div class="form-group my-3 col-6">
+                <div class="form-group my-3 col-12 col-md-6">
                     <label for="language" class="fw-bold">Lenguaje</label>
                     <p>En que idioma está el audio?</p>
                     <select class="form-control" name="language" id="language">
@@ -31,7 +31,7 @@
                         <option value="Portuguese">Portugues</option>
                     </select>
                 </div>
-                <div class="form-group my-3 col-6">
+                <div class="form-group my-3 col-12 col-md-6">
                     <label for="model" class="fw-bold">Modelo</label>
                     <p>Si no sabes que es esto, no lo toques.</p>
                     <select class="form-control" name="model" id="model">
